# raytracinginonesemester

./: .gitignore  README.md
HW1/: CMakeLists.txt  README.md
HW1/src/: main.cu  raytracer.h
HW2/assets/json_files/: sphere.json
HW2/include/: brdf.h
HW2/src/: main.cu
RayTracer/GPUandCPU/: README.md
RayTracer/GPUandCPU/src/: main.cu
include/: brdf.h  material.h  medium.h  query.cu  query.h  scene.h  shader.h
src/: main.cu
